# LifeCalendar

./: iedea.md
client/: .eslintrc.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: App.tsx
client/src/api/: authApi.ts  eventsApi.ts
client/src/components/: index.ts
client/src/components/LifeCalendar/: LifeCalendar.module.scss  LifeCalendar.tsx
client/src/components/Sidebar/: Sidebar.tsx
client/src/components/TodoList/: TodoList.module.scss  TodoList.tsx
client/src/context/: ThemeContext.tsx
client/src/pages/: index.ts
client/src/pages/EditProfilePage/: EditProfilePage.tsx
client/src/pages/HomePage/: HomePage.tsx
client/src/pages/LoginPage/: LoginPage.tsx
client/src/pages/NotFoundPage/: NotFoundPage.tsx
client/src/pages/ProfilePage/: ProfilePage.tsx
client/src/pages/RegisterPage/: RegisterPage.tsx
client/src/pages/SettingsPage/: SettingsPage.tsx
client/src/pages/TasksPage/: TasksPage.tsx
client/src/routes/: AppRoutes.tsx  PrivateRoute.tsx  PublicRoute.tsx  index.ts  paths.ts
client/src/theme/: theme.ts
server/: .env  .env.example  Cargo.toml  README.md
server/docs/: README.md
server/src/: auth.rs  main.rs  routes.rs  server.rs
